@@ -2,8 +2,7 @@ Source: maint-guide
 Section: doc
 Priority: optional
 Maintainer: Josip Rodin <joy-packages@debian.org>
-Build-Depends-Indep: debiandoc-sgml, tetex-bin, tetex-extra
-Build-Depends: debhelper (>= 2), gs-esp | gs
+Build-Depends-Indep: debhelper (>> 3.0.0), debiandoc-sgml (>= 1.1.86), tetex-bin, tetex-extra, w3m (>= 0.3) | w3m-ssl (>= 0.3) | w3mmee (>= 0.3), cjk-latex, freetype1-tools, tfm-arphic-bsmi00lp, tfm-arphic-bkai00mp, tfm-arphic-gbsn00lp, tfm-arphic-gkai00mp, hbf-jfs56, hbf-cns40-b5, hbf-kanji48, hlatex, hlatex-fonts-base, gs-esp | gs
 Standards-Version: 3.6.1
 
 Package: maint-guide
