@@ -41,18 +41,16 @@ install: stamp-build
                         $(name).en.ps $(name).en.pdf \
                         debian/$(name)/$(docdir)
 	ln -s index.en.html \
-              debian/$(name)/$(docdir)/$(name).en.html/index.html
+          debian/$(name)/$(docdir)/$(name).en.html/index.html
 # most of the translations just use the language code
 	@set -ex; for lang in $(languagesfoo); do \
           cp -a $(name).$$lang.html debian/$(name)-$$lang/$(docdir); \
           ln -s index.$$lang.html \
-                debian/$(name)-$$lang/$(docdir)/$(name).$$lang.html/index.html; \
+            debian/$(name)-$$lang/$(docdir)/$(name).$$lang.html/index.html; \
           $(install_file) $(name).$$lang.txt $(name).$$lang.sgml \
             debian/$(name)-$$lang/$(docdir); \
-          if [ $$lang != ja ] &&  [ $$lang != ko ]; then \
-            $(install_file) $(name).$$lang.ps $(name).$$lang.pdf \
-              debian/$(name)-$$lang/$(docdir); \
-          fi; \
+          $(install_file) $(name).$$lang.ps $(name).$$lang.pdf \
+            debian/$(name)-$$lang/$(docdir); \
         done
 # special case for translations using language_country code
 	@set -ex; for i in $(languagesbar); do \
@@ -60,13 +58,11 @@ install: stamp-build
 	  s=`echo $${i} | cut -d_ -f2 | tr A-Z a-z`; \
 	  cp -a $(name).$${i}.html debian/$(name)-$$l/$(docdir); \
 	  $(install_file) $(name).$${i}.txt $(name).$${i}.sgml \
-            debian/$(name)-$${l}/$(docdir); \
-          if [ $$l != zh ]; then \
-	    $(install_file) $(name).$${i}.ps $(name).$${i}.pdf \
-              debian/$(name)-$${l}/$(docdir); \
-	  fi; \
+	    debian/$(name)-$${l}/$(docdir); \
+	  $(install_file) $(name).$${i}.ps $(name).$${i}.pdf \
+	    debian/$(name)-$${l}/$(docdir); \
 	  ln -s index.$${l}-$${s}.html \
-                debian/$(name)-$${l}/$(docdir)/$(name).$${i}.html/index.html; \
+	    debian/$(name)-$${l}/$(docdir)/$(name).$${i}.html/index.html; \
 	done
 
 binary-indep: DH_OPTIONS=-i
