@@ -1,10 +1,11 @@
 maint-guide (1.2.5) unstable; urgency=low
 
-  * Update build script and dependency to accomodate Korean PDF under 
+  * Update build script and dependency to accomodate Korean PDF under
     the new debiandoc-sgml. (closes: #293753)
   * Update description matching with new pdebuild behavior.
+  * Update required version of debiandoc-sgml.
 
- -- Osamu Aoki <osamu@debian.org>  Mon, 14 Feb 2005 22:50:54 +0100
+ -- Osamu Aoki <osamu@debian.org>  Wed, 16 Feb 2005 23:26:34 +0100
 
 maint-guide (1.2.4) unstable; urgency=low
 
